force-app/main/default/objects/HAM_Object_Fetcher__mdt/fields/HAM_Button_1_Label__c.field-meta.xml
<CustomField>
    <fullName>HAM_Button_1_Label__c</fullName>
    <label>HAM Button 1 Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>