force-app/main/default/objects/HAM_Object_Fetcher__mdt/fields/HAM_Button_1_URL__c.field-meta.xml
<CustomField>
    <fullName>HAM_Button_1_URL__c</fullName>
    <label>HAM Button 1 URL</label>
    <type>Url</type>
</CustomField>