force-app/main/default/objects/HAM_Object_Fetcher__mdt/fields/HAM_Button_2_URL__c.field-meta.xml
<CustomField>
    <fullName>HAM_Button_2_URL__c</fullName>
    <label>HAM Button 2 URL</label>
    <type>Url</type>
</CustomField>