force-app/main/default/objects/HAM_Object_Fetcher__mdt/fields/Ham_Section_Order__c.field-meta.xml
<CustomField>
    <fullName>Ham_Section_Order__c</fullName>
    <label>Ham Section Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>