force-app/main/default/objects/HAM_Object_Fetcher__mdt/fields/HAM_Service_Indicator_ID__c.field-meta.xml
<CustomField>
    <fullName>HAM_Service_Indicator_ID__c</fullName>
    <label>HAM Service Indicator ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>