force-app/main/default/objects/HAM_Object_Fetcher__mdt/fields/HAM_Service_Indicator_Value_Name__c.field-meta.xml
<CustomField>
    <fullName>HAM_Service_Indicator_Value_Name__c</fullName>
    <label>HAM Service Indicator Value Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>