force-app/main/default/objects/HAM_Object_Fetcher__mdt/listViews/All_Object_Fetcher_CMD.listView-meta.xml
<ListView>
    <fullName>All_Object_Fetcher_CMD</fullName>
    <columns>MasterLabel</columns>
    <columns>HAM_Level_1__c</columns>
    <columns>HAM_Level_2__c</columns>
    <columns>HAM_Default_Display_Value__c</columns>
    <columns>HAM_Order__c</columns>
    <columns>HAM_Display_Field__c</columns>
    <columns>HAM_Display_Label__c</columns>
    <columns>HAM_Display_Type__c</columns>
    <columns>HAM_Reference_Field__c</columns>
    <columns>HAM_Related_Object__c</columns>
    <columns>HAM_Additional_Filter__c</columns>
    <columns>HAM_Table_Field_Labels__c</columns>
    <columns>HAM_Table_Field_APIs__c</columns>
    <columns>HAM_Table_Field_Types__c</columns>
    <columns>HAM_Table_Default_Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Object Fetcher CMD</label>
    <language>en_US</language>
</ListView>